# find-quadruples-with-product

./: Cargo.toml  README.md
benches/: solution.rs
src/: division.rs  lib.rs  naive.rs  naive_parallel.rs  pruning.rs
