[package]
name = "find-quadruples-with-products"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[[bench]]
name = "solution"
harness = false

[dependencies]
rayon = "1.5.3"
